--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,141 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+/* main text color: #e84118
+alt text color: #d35400 or #c0392b
+dark background color: #7f8c8d
+light background color: #dcdde1
+darker background color: #34495e */
+
+body {
+  font-family: 'Nunito' sans-serif;
+  color: #e84118;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  color: #c0392b;
+  margin-bottom: 1rem;
+}
+
+.flex-flip:nth-child(2n){  flex-direction: row-reverse; }
+
+
+img {
+  max-width: 100%;
+}
+
+h1 {
+  font-size: 5rem; 
+}
+h2  { font-size: 2.2rem;  }
+  h3  { font-size: 1.8rem;  }
+  h4  { font-size: 1.4rem;  }
+  p   { font-size: 1rem;  }
+
+  p, ul {
+     margin-bottom: 0.8rem;
+  }
+
+  /* this makes sure that the last element in any container doesn't have margin-bottom */
+  h2:last-child,
+  h3:last-child,
+  h4:last-child,
+  h5:last-child,
+  h6:last-child,
+  p:last-child {
+    margin-bottom:0;
+  }
+
+  hr { /* this is a line element */
+    border: none;
+    border-bottom: 3px solid;
+    width: 4rem;
+    margin-bottom: 1rem;
+  }
+
+  .btn {
+    text-decoration: none;
+    color: #c0392b;
+    border: 2px solid;
+    padding: 0.6rem 2rem;
+    margin-top: 1rem;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    font-weight: 500;
+  }
+
+  .btn:hover {
+    color: #e84118;
+  }
+
+  .dark-section .btn {   /* this is for a button on a dark background */
+    border: 2px solid #dcdde1;
+    color: #dcdde1;
+  }
+
+  .dark-section .btn:hover {
+    color: #dcdde1;
+    border-color: #e67e22;
+  }
+
+
+.capped-width { width: 80%; margin: auto;}
+
+.tall-50  {  min-height: 50vh;   }
+.tall-100 {  min-height: 100vh;  }
+
+
+.bg-img {
+  background-position: center;
+  background-size: cover;
+}
+
+a{
+  color: #c0392b;
+  text-decoration: underline;
+}
+
+p{
+  font-size: 1.1rem;
+  line-height: 1.3rem;
+}
+
+a:hover {
+  color: #e84118;
+}
+
+section {
+  background-color: #dcdde1;
+  color: #7f8c8d;
+  padding: 5% 10%;
+
+}
+
+.dark-section {
+  background-color: #7f8c8d;
+  color: #dcdde1;
+}
+
+
+.padded {
+  padding: 5%;
+}
+
+.padding-1 {
+  padding: 1rem;
+}
+
+.padding-2 {
+  padding: 2rem;
+}
+
+.centered {
+  text-align: center;
+
+}
+
+.full-width {
+  width: 100%;
+}
