--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,11 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title> Celiac Compass: {{page title}} </title>
-  <link rel="stylesheet" href="/css/style.css"/>
+  <title> Celiac Compass: {{page.title}} </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,300i,400,400i,600,600i,700,700i|Playfair+Display:400,400i,700,700i|Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css"/>
 </head>
   <body>
     <header class="grid-middle centered padding-1">
@@ -17,7 +17,7 @@
         <a class= padded href="#"> Restaurants </a>
       </nav>
       <div class="col-3-middle centered padding-1">
-        <a href="/">
+        <a href="">
           <h2 class="logo"> Celiac Compass </h2>
         </a>
       </div>
