--- a/css/style.css
+++ b/css/style.css
@@ -10,24 +10,24 @@ alt text color: #813405; */
 /* dark background color: #363020
 light background color: #EADCDE;
 alt light background color: #D3793D; */
-
 body {
-  font-family: 'Nunito' sans-serif;
+  font-family: 'Nunito'sans-serif;
   color: #5A0001;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1, h2, h3, h4, h5, h6 {
   color: #813405;
   margin-bottom: 1rem;
   text-size: 5rem;
 }
 
-.restaurant-listing  {
-  margin-bottom: 2rem; 
+.restaurant-listing {
+  margin-bottom: 2rem;
 }
 
-.flex-flip:nth-child(2n){  flex-direction: row-reverse; }
-
+.flex-flip:nth-child(2n) {
+  flex-direction: row-reverse;
+}
 
 img {
   max-width: 100%;
@@ -36,64 +36,83 @@ img {
 h1 {
   font-size: 5rem;
 }
-h2  { font-size: 2.2rem;  }
-  h3  { font-size: 1.8rem;  }
-  h4  { font-size: 1.4rem;  }
-  p   { font-size: 1rem;  }
 
-  p, ul {
-     margin-bottom: 0.8rem;
-  }
+h2 {
+  font-size: 2.2rem;
+}
 
-  /* this makes sure that the last element in any container doesn't have margin-bottom */
-  h2:last-child,
-  h3:last-child,
-  h4:last-child,
-  h5:last-child,
-  h6:last-child,
-  p:last-child {
-    margin-bottom:0;
-  }
+h3 {
+  font-size: 1.8rem;
+}
 
-  hr { /* this is a line element */
-    border: none;
-    border-bottom: 3px solid;
-    width: 4rem;
-    margin-bottom: 1rem;
-  }
+h4 {
+  font-size: 1.4rem;
+}
 
-  .btn {
-    text-decoration: none;
-    color: #EADCDE;
-    border: 2px solid;
-    padding: 0.6rem 2rem;
-    margin-top: 1rem;
-    display: inline-block;
-    text-transform: uppercase;
-    font-size: 0.9rem;
-    font-weight: 500;
-  }
+p {
+  font-size: 1rem;
+}
 
-  .btn:hover {
-    color: #813405;
-  }
+p, ul {
+  margin-bottom: 0.8rem;
+}
 
-  .dark-section .btn {   /* this is for a button on a dark background */
-    border: 2px solid #363020
-    color: #363020
-  }
+/* this makes sure that the last element in any container doesn't have margin-bottom */
+h2:last-child,
+h3:last-child,
+h4:last-child,
+h5:last-child,
+h6:last-child,
+p:last-child {
+  margin-bottom: 0;
+}
 
-  .dark-section .btn:hover {
-    color: #813405;
-    border-color: #5A0001;
-  }
+hr {
+  /* this is a line element */
+  border: none;
+  border-bottom: 3px solid;
+  width: 4rem;
+  margin-bottom: 1rem;
+}
 
+.btn {
+  text-decoration: none;
+  color: #EADCDE;
+  border: 2px solid;
+  padding: 0.6rem 2rem;
+  margin-top: 1rem;
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  font-weight: 500;
+}
 
-.capped-width { width: 80%; margin: auto;}
+.btn:hover {
+  color: #813405;
+}
 
-.tall-50  {  min-height: 50vh;   }
-.tall-100 {  min-height: 100vh;  }
+.dark-section .btn {
+  /* this is for a button on a dark background */
+  border: 2px solid #363020 color: #363020
+}
 
+.dark-section .btn:hover {
+  color: #813405;
+  border-color: #5A0001;
+}
+
+.capped-width {
+  width: 80%;
+  margin: auto;
+}
+
+.tall-50 {
+  min-height: 50vh;
+}
+
+.tall-100 {
+  min-height: 100vh;
+}
 
 .bg-img {
   background-position: center;
@@ -105,12 +124,60 @@ h2  { font-size: 2.2rem;  }
   font-size: 2rem;
 }
 
-a{
+.area-listing .bg-img {
+  height: 20rem;
+  background-position: center;
+  background-size: cover;
+}
+
+.area {
+  text-align: center;
+}
+
+.area a {
+  text-transform: uppercase;
+  padding: .3rem;
+  border: 2px solid #5A0001;
+}
+
+.restaurant-listing .bg-img {
+  height: 20rem;
+  background-position: center;
+  background-size: cover;
+}
+
+.restaurant {
+  text-align: center;
+}
+
+.restaurant-listing a {
+  text-transform: uppercase;
+  padding: .3rem;
+  border: 2px solid #5A0001;
+}
+
+.cuisines .bg-img {
+  height: 20rem;
+  background-position: center;
+  background-size: cover;
+}
+
+.cuisines a {
+  text-transform: uppercase;
+  padding: .3rem;
+  border: 2px solid #5A0001;
+}
+
+.cuisines {
+  text-align: center;
+}
+
+a {
   color: #5A0001;
   text-decoration: underline;
 }
 
-p{
+p {
   font-size: 1.1rem;
   line-height: 1.3rem;
 }
@@ -123,14 +190,15 @@ section {
   background-color: #dcdde1;
   color: #7f8c8d;
   padding: 5% 10%;
-
 }
 
 .dark-section {
-  background-color: #363020
-  color: #EADCDE;
+  background-color: #363020 color: #EADCDE;
 }
 
+.light-bg {
+  background-color: rgb(240,240,240);
+}
 
 .padded {
   padding: 5%;
@@ -150,7 +218,6 @@ section {
 
 .centered {
   text-align: center;
-
 }
 
 .padding-0 {
@@ -167,4 +234,121 @@ section {
 
 .fixed {
   background-attachment: fixed;
+}
+
+/* Nutritional Facts  */
+@import "compass/css3";
+
+.image {
+  width: 250px;
+  float: left;
+  margin: 20px
+}
+
+body {
+  font-size: small;
+  line-height: 1.4;
+}
+
+p {
+  margin: 0;
+}
+
+.performance-facts {
+  border: 1px solid black;
+  float: left;
+  width: 280px;
+  padding: 2rem;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+.performance-facts__title {
+  font-weight: bold;
+  font-size: 2rem;
+  margin: 0 0 0.25rem 0;
+}
+
+.performance-facts__header {
+  border-bottom: 10px solid black;
+  padding: 0 0 0.25rem 0;
+  margin: 0 0 0.5rem 0;
+
+  p {
+    margin: 0;
+  }
+}
+
+.performance-facts__table {
+  width: 100%;
+
+  thead tr {
+    th, td {
+      border: 0;
+    }
+  }
+
+  th, td {
+    font-weight: normal;
+    text-align: left;
+    padding: 0.25rem 0;
+    border-top: 1px solid black;
+    white-space: nowrap;
+  }
+
+  td {
+    &:last-child text-align: right;
+  }
+
+  .th {
+    text-align: left;
+  }
+
+  .blank-cell {
+    width: 1rem;
+    border-top: 0;
+  }
+}
+
+.small-info {
+  font-size: 0.7rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.thick-end {
+  border-bottom: 10px solid black;
+}
+
+.thin-end {
+  border-bottom: 1px solid black;
+}
+
+.clickable-box {
+  color: inherit;
+  text-decoration: none;
+  box-shadow: 0 rgba(0, 0, 0, 0);
+  /* so that we can add a transition */
+  transition: 0.2s all;
+  display: block;
+}
+
+.clickable-box .overlay {
+  min-height: 10rem;
+  padding: 5rem 2rem;
+  background-color: rgba(0, 0, 10, 0.6);
+  color: white;
+}
+
+.clickable-box p {
+  margin-bottom: 0;
+}
+
+.clickable-box:hover {
+  box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.4), 0 10px 20px -5px rgba(0, 0, 0, 0.4);
+  margin-top: -2px;
 }
