restaurants and linking
linked all pages and finished restaurant page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,19 +5,19 @@
   <meta charset="utf-8">
   <title> Celiac Compass: {{page.title}} </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,300i,400,400i,600,600i,700,700i|Playfair+Display:400,400i,700,700i|Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css"/>
 </head>
   <body>
     <header class="grid-middle centered padding-1">
       <nav class="col-4-middle">
-        <a class= padded href="#"> Destinations </a>
-        <a class= padded href="#"> Cuisines </a>
-        <a class= padded href="#"> Restaurants </a>
+        <a class= padded href="/destinations/bali"> Destinations </a>
+        <a class= padded href="/cuisines/mahi-mahi"> Cuisines </a>
+        <a class= padded href="/restaurants/fair-warung"> Restaurants </a>
       </nav>
       <div class="col-3-middle centered padding-1">
-        <a href="">
+        <a class= centered href="/index">
           <h2 class="logo"> Celiac Compass </h2>
         </a>
       </div>
