--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,57 @@ h1, h2, h3, h4, h5, h6 {
   text-size: 5rem;
 }
 
+.checked {
+  color: orange;
+}
+
+.fa-star-half-o {
+  color: orange;
+}
+
+.click {
+  text-decoration: none;
+  text-transform: uppercase;
+  border: 2px solid #5A0001;
+  margin: 0 1rem;
+}
+
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
+
 .restaurant-listing {
   margin-bottom: 2rem;
 }
@@ -77,7 +128,7 @@ hr {
 
 .btn {
   text-decoration: none;
-  color: #EADCDE;
+  color: #813405;
   border: 2px solid;
   padding: 0.6rem 2rem;
   margin-top: 1rem;
@@ -88,7 +139,7 @@ hr {
 }
 
 .btn:hover {
-  color: #813405;
+  color: #363020;
 }
 
 .dark-section .btn {
@@ -115,14 +166,15 @@ hr {
 }
 
 .bg-img {
-  background-position: center;
+  background-image: url('/images/fair-warung3.jpeg');
   background-size: cover;
+  background-position: center;
 }
 
-.bg-img p {
+/* .bg-img p {
   color: #5A0001;
   font-size: 2rem;
-}
+} */
 
 .area-listing .bg-img {
   height: 20rem;
