--- a/_layouts/restaurant.html
+++ b/_layouts/restaurant.html
@@ -24,10 +24,10 @@ layout: default
       <span class="fa fa-star-half-o"></span>
     </div>
     <div class="padded centered">
-        <a class="btn padded" href="http://www.fairfuturefoundation.org/booking/?utm_source=tripadvisor&utm_medium=referral">
+        <a class="btn padded" target="_blank" href="http://www.fairfuturefoundation.org/booking/?utm_source=tripadvisor&utm_medium=referral">
           Website
         </a>
-        <a class="btn padded" href="https://www.fairfuturefoundation.org/fairmedias/pdf/fwb-menus/fwb-menu-gb.pdf">
+        <a class="btn padded" target="_blank" href="https://www.fairfuturefoundation.org/fairmedias/pdf/fwb-menus/fwb-menu-gb.pdf">
           Menu
         </a>
       </div>
