--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,16 @@ body {
   color: #5A0001;
 }
 
+input, textarea {
+    width: 100%;
+    padding: 7px;
+    border: 1px solid grey;
+
+}
+.contact span {
+  color: #D3793D;
+}
+
 h1, h2, h3, h4, h5, h6 {
   color: #813405;
   margin-bottom: 1rem;
