--- a/_includes/cuisine-listing.html
+++ b/_includes/cuisine-listing.html
@@ -1,3 +1,5 @@
+
+
 <div class="cuisines">
   <div class="bg-img" style="background-image: url(/images/ubud.jpg)">
   </div>
@@ -8,7 +10,7 @@
     <p>
       {{cuisine.subtitle}}
     </p>
-      <a href="{{ cuisine.url }}">
+      <a class="btn" href="{{ cuisine.url }}">
         See More
       </a>
   </div>
