--- a/_includes/restaurant-listing.html
+++ b/_includes/restaurant-listing.html
@@ -11,5 +11,6 @@
     <p>
       {{restaurant.description}}
     </p>
+    <a class="btn" href="{{restaurant.url}}"> Read More </a>
   </div>
 </div>
