--- a/_layouts/cuisines.html
+++ b/_layouts/cuisines.html
@@ -67,7 +67,8 @@ layout: default
     </dl>
   </section>
 
-    <section class="padded col-9">
+    <section class="padded centered col-9">
+      <h2> Celiac Friendly Restaurants in Bali </h2>
       <div class="restaurant-listing">
         <div class="grid padded mob-flip">
           <div class="col-5_sm-12 bg-image" style="background-image: url(/images/bali.jpg)">
