--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -8,40 +7,61 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,300i,400,400i,600,600i,700,700i|Playfair+Display:400,400i,700,700i|Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css"/>
+
 </head>
-  <body>
-    <header class="grid-middle centered padding-1">
-      <nav class="col-4-middle">
-        <a class= padded href="/destinations/bali"> Destinations </a>
+<body>
+  <header class="grid-middle centered padding-1">
+    <nav class="col-4-middle">
+      <span class="dropdown-nav">
+        <a class="padded" href="/destination">Destinations</a>
+        <div class="dropdown-content">
+          <a href="/destinations/bali"> Bali </a>
+          <a href="/destinations/london"> London </a>
+          <a href="/destinations/hawaii"> Hawaii </a>
+          <a href=""> Ireland </a>
+          <a href=""> Spain </a>
+        </div>
+      </span>
+
+      <span>
+
         <a class= padded href="/cuisines/mahi-mahi"> Cuisines </a>
+      </span>
+      <span>
         <a class= padded href="/restaurants/fair-warung"> Restaurants </a>
-      </nav>
-      <div class="col-3-middle centered padding-1">
-        <a class= centered href="/index">
-          <h2 class="logo"> Celiac Compass </h2>
-        </a>
-      </div>
-      <nav class="col-4-middle centered padding-1">
-        <a class= padded href="#"> Contributers </a>
-        <a class= padded href="#"> Work With Us </a>
-        <a class= padded href="#"> Contact Us </a>
-      </nav>
+      </span>
+    </nav>
+    <div class="col-3-middle centered padding-1">
+      <a class= centered href="/index">
+        <h2 class="logo"> <img src="/images/compass.jpg" alt="Celiac Compass"> </h2>
+      </a>
+    </div>
+    <nav class="col-4-middle centered padding-1">
+      <a class= padded href="#"> About </a>
+      <a class= padded href="#"> Contributers </a>
+      <a class= padded href="/contact"> Contact Us </a>
+    </nav>
     </header>
-
 {{content}}
-
 <footer>
   <footer class="grid padded dark-section">
     <div class="col-5_sm-12 padded">
-      <h2 class="logo"> Logo </h2>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+      <div class="col-3-middle centered padding-1">
+        <a class= centered href="/index">
+          <h2 class="logo"> <img src="/images/compass.jpg" alt="Celiac Compass"> </h2>
+        </a>
+      </div>
+      <p> Go On A Gluten Free Journey With Us </p>
     </div>
     <div class="col-1 sm-hidden"></div>
     <div class="col-6_sm-12-middle padded right">
       <nav class="inline">
-        <a href="#"> Lorem ipsum </a>|
-        <a href="#"> Dolor sit </a>|
-        <a href="#"> Consectetur </a>
+        <a href="/destinations/bali"> Destinations </a>|
+        <a href="/cuisines/mahi-mahi"> Cuisines </a>|
+        <a href="/restaurants/fair-warung"> Restaurants </a>|
+        <a href="#"> About </a>|
+        <a href="#"> Contributers </a>|
+        <a href="/contact"> Contact Us </a>
       </nav>
       <nav class="inline socials">
         <a href="#">
