--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,36 @@ body {
   color: #5A0001;
 }
 
-input, textarea {
+.alt-text {
+  color: #813405;
+  font-size: 3rem;
+}
+
+  input, textarea {
     width: 100%;
     padding: 7px;
     border: 1px solid grey;
-
 }
+
+.pitch input {
+  width: auto;
+  background-color: rgba(0,0,0,00);
+  border: none;
+  text-align: center;
+}
+
+.logo {
+  max-width: 200px;
+  margin: auto;
+}
+
+.pitch ::-webkit-input-placeholder ,
+.pitch :-ms-input-placeholder,
+.pitch ::placeholder {
+  color: #D3793D;
+text-align: center;
+}
+
 .contact span {
   color: #D3793D;
 }
@@ -28,7 +52,7 @@ input, textarea {
 h1, h2, h3, h4, h5, h6 {
   color: #813405;
   margin-bottom: 1rem;
-  text-size: 5rem;
+  font-size: 5rem;
 }
 
 .checked {
@@ -413,4 +437,53 @@ table {
 .clickable-box:hover {
   box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.4), 0 10px 20px -5px rgba(0, 0, 0, 0.4);
   margin-top: -2px;
+}
+
+/* Deswin Dan Swinkels */
+
+header span{
+  position:relative;
+  top:1rem;
+  left:0;
+}
+/**--------------------NAV */
+
+header nav a {
+  display:inline-block;
+  text-decoration: none;
+  padding: 15px 11px;
+  font-size: 20px;
+  font-weight: 300;
+  /* color: #C3BFBC;
+  font-family: 'Alegreya Sans SC', sans-serif; */
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    left:10px;
+    padding:5px;
+    top: 22px;
+    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
+}
+
+.dropdown-content a {
+  display:block;
+  padding:5px 15px;
+  text-align:left;
+  white-space:nowrap;
+}
+.dropdown-content a:hover{
+  background-color: #5A0001;
+  color: #EADCDE;
+}
+
+.dropdown-nav {
+  position:relative;
+}
+li{listdecoration:none}
+
+.dropdown-nav:hover .dropdown-content {
+    display: block;
 }
