--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,8 +44,8 @@
     </header>
 {{content}}
 <footer>
-  <footer class="grid padded dark-section">
-    <div class="col-5_sm-12 padded">
+  <footer class="grid dark-section">
+    <div class="col-5_sm-12">
       <div class="col-3-middle centered padding-1">
         <a class= centered href="/index">
           <h2 class="logo"> <img src="/images/compass.jpg" alt="Celiac Compass"> </h2>
@@ -54,7 +54,7 @@
       <p> Go On A Gluten Free Journey With Us </p>
     </div>
     <div class="col-1 sm-hidden"></div>
-    <div class="col-6_sm-12-middle padded right">
+    <div class="col-6_sm-12-middle right">
       <nav class="inline">
         <a href="/destinations/bali"> Destinations </a>|
         <a href="/cuisines/mahi-mahi"> Cuisines </a>|
