last changes for website
last changes

--- a/_includes/cuisine-listing.html
+++ b/_includes/cuisine-listing.html
@@ -1,7 +1,7 @@
 
 
 <div class="cuisines">
-  <div class="bg-img" style="background-image: url(/images/ubud.jpg)">
+  <div class="bg-img" style="background-image: url({{cuisine.image}})">
   </div>
   <div class="cuisine">
     <h3>
