--- a/_includes/restaurant-listing.html
+++ b/_includes/restaurant-listing.html
@@ -1,5 +1,5 @@
 <div class="restaurant-listing">
-  <div class="bg-img" style="background-image: url(/images/ubud.jpg)">
+  <div class="bg-img" style="background-image: url({{restaurant.image}})">
   </div>
   <div class="restaurant">
     <h3>
