--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,23 @@
 
 </head>
 <body>
+  <nav  class="tablet-hide">
+    <div class="burger-button">
+      <span class="burger-top"></span>
+      <span class="burger-middle"></span>
+      <span class="burger-bottom"></span>
+    </div>
+    <div class="burger-menu">
+      <a href="/destinations">Destinations</a>
+      <a href="/restaurants/fair-warung">Restaurants</a>
+      <a href="/cuisines/gado-gado">Cuisines</a>
+      <a href="/contact">Contact</a>
+      <a href="">About</a>
+      <a href="">Contributers</a>
+    </div>
+  </nav>
   <header class="grid-middle centered padding-1">
-    <nav class="col-4-middle">
+    <nav class="col-4-middle tablet-show">
       <span class="dropdown-nav">
         <a class="padded" href="/destination">Destinations</a>
         <div class="dropdown-content">
@@ -25,7 +40,7 @@
 
       <span>
 
-        <a class= padded href="/cuisines/mahi-mahi"> Cuisines </a>
+        <a class= padded href="/cuisines/gado-gado"> Cuisines </a>
       </span>
       <span>
         <a class= padded href="/restaurants/fair-warung"> Restaurants </a>
@@ -36,7 +51,7 @@
         <h2 class="logo"> <img src="/images/compass.jpg" alt="Celiac Compass"> </h2>
       </a>
     </div>
-    <nav class="col-4-middle centered padding-1">
+    <nav class="col-4-middle centered padding-1 tablet-show">
       <a class= padded href="#"> About </a>
       <a class= padded href="#"> Contributers </a>
       <a class= padded href="/contact"> Contact Us </a>
@@ -46,11 +61,9 @@
 <footer>
   <footer class="grid dark-section">
     <div class="col-5_sm-12">
-      <div class="col-3-middle centered padding-1">
-        <a class= centered href="/index">
-          <h2 class="logo"> <img src="/images/compass.jpg" alt="Celiac Compass"> </h2>
-        </a>
-      </div>
+      <h2>
+        𝒞𝑒𝓁𝒾𝒶𝒸 𝒞𝑜𝓂𝓅𝒶𝓈𝓈
+      </h2>
       <p> Go On A Gluten Free Journey With Us </p>
     </div>
     <div class="col-1 sm-hidden"></div>
@@ -76,5 +89,9 @@
       </nav>
     </div>
   </footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="/js/main.js">
+
+</script>
   </body>
 </html>
