--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
       <a href="">Contributers</a>
     </div>
   </nav>
-  <header class="grid-middle centered padding-1">
+  <header class="grid-middle-center centered padding-1">
     <nav class="col-4-middle tablet-show">
       <span class="dropdown-nav">
         <a class="padded" href="/destination">Destinations</a>
